-------
v4.2.26
-------

[jan] Fix exporting contacts to LDIF (Bug #14934).


-------
v4.2.25
-------

[mjr] Fix typo that could cause tags to be lost during EAS sync, if the
      categories property is ghosted.


-------
v4.2.24
-------

[mjr] SECURITY: Fix XSS vulnerability in display of contact tags.
[jan] Clarify objectClass filter examples for LDAP backends (Ralf Lang
      <lang@b1-systems.de>, PR 3).


-------
v4.2.23
-------

[mjr] Remove debug output that was breaking EAS searches (Bug: 14843).


-------
v4.2.22
-------

[jan] Allow to use table prefixes in SQL column map.
[jan] Fix reading LDAP contacts if 'objectclass' parameter is empty.
[mjr] Fix filtering Turba_Api::search() results by requested fields (Bug
      #14719).
[mjr] Ensure new contacts from EAS clients are given a name attribute.


-------
v4.2.21
-------

[jan] Officially support PHP 7.


-------
v4.2.20
-------

[jan] SECURITY: Fix open redirects.
[jan] Fix creating address books with the external API.


-------
v4.2.19
-------

[mjr] Fix importing vCard LABEL fields (Bug #14584).
[mjr] Fix saving sync preference when no default address book exists (Bug
      #14585).
[mjr] Fix removing virtual address books when calling the removeUserData API
      (Bug #14577).
[jan] Fix fatal error if group contacts from an LDAP server don't exist
      anymore.


-------
v4.2.18
-------

[jan] Remove left over from 10-years-old code (Bug #14521).


-------
v4.2.17
-------

[mjr] Fix regression in sorting contacts by a name field (Bug #14471).
[mjr] Fix regression in saving tags (Bug #14463).


-------
v4.2.16
-------

[mjr] Fix synchronizing email fields in certain cases (Bug #14301).
[jan] Continue removing user data if a source doesn't have an __owner field.
[mjr] Fix over-agressive filtering of search results when searching via the API
      (Bug #13945).


-------
v4.2.15
-------

[jan] Update Portuguese translation.
[jan] Update Basque translation.