@@ -27,7 +27,7 @@
   state:
     release: stable
     api: stable
-  date: 2019-05-25
+  date: 2022-06-06
   license:
     identifier: ASL
     uri: http://www.horde.org/licenses/apache
