@@ -2,6 +2,10 @@
 v4.2.26
 -------
 
+[jan] SECURITY: Fix remote code execution by an unserialization attack
+      (CVE-2022-30287).
+[jan] Fix deprecation warnings about each() with PHP 7.2+.
+[mjr] Fix setting LDAP_OPT_REFERRALS to 0.
 [jan] Fix exporting contacts to LDIF (Bug #14934).
 
 
